<resources>
    <string name="app_name">PassingDataExample</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="second_mobile_number">Mobile Number</string>
    <string name="second_age">Age</string>
    <string name="second_full_name">Full Name</string>
    <string name="ok">OK</string>
</resources>